--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "emailjs": "^4.0.3",
+    "google-auth-library": "^9.8.0",
+    "googleapis": "^134.0.0",
+    "mailparser": "^3.7.0",
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/mailparser": "^3.4.4",
     "@types/nodemailer": "^6.4.14"
   }
 }
